--- a/components/Hero.module.scss
+++ b/components/Hero.module.scss
@@ -1,8 +1,8 @@
 @use '@/app/base';
 
 .hero {
-	min-height: 100vh;
-	padding: 6rem 0;
+	// min-height: 100vh;
+	// padding-top: 20vh;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
